2010-10-20  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16075: Add IfModule mod_rewrite.c to misc/advanced.htaccess
	* Fixed bug #16077: Palette titles have no margin to the left in the new page / tt_content form layouts

2010-10-20  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16049: Loading mask doesn't disappear on hitting Esc/cancel loading

2010-10-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16073: htmlArea RTE: Add paste as plain text feature
	* Follow-up to bug #15339: htmlArea RTE: tkr_rteanchors breaks the link editing dialogue
	* Follow-up to feature #16073: htmlArea RTE: Add paste as plain text feature

2010-10-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16000: Move versioning selector to the version extension

2010-10-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0alpha3

2010-10-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16059: Use ExtJS Tooltips for CSH labels
	* Fixed bug #16071: PHP Fatal error in t3lib_contextmenu_renderer_Abstract (Thanks to Stefano Kowalke)
	* Removal of unused and illegal files inside of codemirror library
	* Fixed bug #16055: BE debug mode should also enable debug mode for libraries

2010-10-19  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15095: The Web>Versioning view has style issues resulting in "wrong layers"
	* Fixed bug #13294: IRRE deleted combo records are still validated by TBE_EDITOR (Thanks to Marcel Greter)
	* Added feature #3613: additional wrap for FORM radio buttons

2010-10-18  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16008: A new TypoScript cObject: FLUIDTEMPLATE
	* Added feature #16031: Feature - Implement new layout and labels for tt_content as result of T3UXW09 (Thanks to Jo Hasenau)
	* Fixed bug #16051: Palette render wrong and throw php warning if fieldset starts with palette
	* Added feature #16015: Feature - Implement new layout and labels for pages as result of T3UXW09 (Thanks to Jo Hasenau)